--- a/uwsgi.conf
+++ b/uwsgi.conf
@@ -2,4 +2,4 @@ description "uWSGI Emperor"
 start on runlevel [2345]
 stop on runlevel [!2345]
 respawn
-exec /usr/local/bin/uwsgi --emperor /etc/uwsgi/sites-enabled --uid www-data --gid www-data --logto /var/log/uwsgi.log
+exec /usr/local/bin/uwsgi --emperor /etc/uwsgi/sites-enabled/ --logto /var/log/uwsgi.log
